@@ -1,0 +1,9 @@
+//
+// This file was generated by the JavaTM Architecture for XML Binding(JAXB) Reference Implementation, vJAXB 2.1.10 in JDK 6 
+// See <a href="http://java.sun.com/xml/jaxb">http://java.sun.com/xml/jaxb</a> 
+// Any modifications to this file will be lost upon recompilation of the source schema. 
+// Generated on: 2010.03.08 at 10:49:47 AM CET 
+//
+
+@javax.xml.bind.annotation.XmlSchema(namespace = "http://www.rmep.org/namespaces/1.0", elementFormDefault = javax.xml.bind.annotation.XmlNsForm.QUALIFIED)
+package org.restlet.example.book.restlet.ch05.sec2.sub8;
