@@ -47,8 +47,8 @@ import org.restlet.data.Status;
 import org.restlet.engine.Engine;
 import org.restlet.ext.xml.DomRepresentation;
 import org.restlet.ext.xml.SaxRepresentation;
-import org.restlet.ext.xml.TransformRepresentation;
 import org.restlet.ext.xml.XmlWriter;
+import org.restlet.ext.xml.XsltRepresentation;
 import org.restlet.representation.InputRepresentation;
 import org.restlet.representation.Representation;
 import org.w3c.dom.Attr;
@@ -916,8 +916,8 @@ public class WadlRepresentation extends SaxRepresentation {
                 final InputRepresentation xslRep = new InputRepresentation(
                         wadlHtmlXsltUrl.openStream(),
                         MediaType.APPLICATION_W3C_XSLT);
-                representation = new TransformRepresentation(Context
-                        .getCurrent(), this, xslRep);
+                representation = new XsltRepresentation(Context.getCurrent(),
+                        this, xslRep);
                 representation.setMediaType(MediaType.TEXT_HTML);
             } catch (IOException e) {
                 Context.getCurrent().getLogger().log(Level.WARNING,
