@@ -36,10 +36,10 @@ import junit.framework.TestCase;
 
 import org.restlet.Component;
 import org.restlet.data.MediaType;
+import org.restlet.ext.xml.Transformer;
+import org.restlet.ext.xml.XsltRepresentation;
 import org.restlet.representation.Representation;
 import org.restlet.representation.StringRepresentation;
-import org.restlet.ext.xml.TransformRepresentation;
-import org.restlet.ext.xml.Transformer;
 
 /**
  * Test case for the Transformer class.
@@ -105,8 +105,8 @@ public class TransformerTestCase extends TestCase {
      */
     public void parallelTestTransform() throws Exception {
         final Component comp = new Component();
-        final TransformRepresentation tr = new TransformRepresentation(comp
-                .getContext(), this.source, this.xslt);
+        final XsltRepresentation tr = new XsltRepresentation(comp.getContext(),
+                this.source, this.xslt);
         final FailureTracker tracker = new FailureTracker();
 
         final int testVolume = 5000;
